Fix assorted alignment/margin/justify issues

--- a/src/common/components/cards/card-kebab-menu-button.scss
+++ b/src/common/components/cards/card-kebab-menu-button.scss
@@ -8,13 +8,29 @@
     }
 }
 
-.kebab-menu-button {
+button.kebab-menu-button {
+    width: 34px;
+    height: 32px;
+    margin: 8px;
+
+    border-radius: 2px;
     background: transparent;
-    top: calc(50% - 4px / 2);
+
+    &:hover {
+        background-color: $neutral-alpha-4;
+    }
+
+    &:active,
+    &[aria-expanded='true'] {
+        background-color: $neutral-alpha-8;
+    }
+
+    div.ms-Button-flexContainer {
+        justify-content: center;
+    }
 
     i {
         font-size: 20px;
-        border: 1.25px;
         color: $primary-text;
     }
 }
